added model weights

--- a/templates/about.htm
+++ b/templates/about.htm
@@ -9,7 +9,7 @@
     <br>
     <div class="row text-center">
         <p class="lead">
-            This project is developed collectively by Pradyumna Gupta,Shantanu Rawat and Vaibhavi Mishra.
+            This project is developed by Pradyumna Gupta <a href="https://www.linkedin.com/in/pradyumna-gupta-1a900317b/" class="fa fa-linkedin"></a>.
         </p>
         <br>
         <br>
